feat(header): add basic functionality with language selector, theme toggle, controls, and navigation

--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -1,3 +1,12 @@
 {
-  "welcome": "Bienvenido a mi página"
+  "welcome": "Bienvenido a mi página",
+  "changeLanguageTo": "Cambiar a",
+  "selectLanguage": "Seleccionar idioma",
+  "currentLanguage": "Idioma actual",
+  "header": {
+    "home": "Inicio",
+    "projects": "Proyectos",
+    "blog": "Blog",
+    "contact": "Contacto"
+  }
 }
