--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,3 +1,12 @@
 {
-  "welcome": "Welcome to my page"
+  "welcome": "Welcome to my page",
+  "changeLanguageTo": "Change to",
+  "selectLanguage": "Select language",
+  "currentLanguage": "Current language",
+  "header": {
+    "home": "Home",
+    "projects": "Projects",
+    "blog": "Blog",
+    "contact": "Contact"
+  }
 }
