feat(header): finish styles on language selector

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -3,6 +3,7 @@
   "changeLanguageTo": "Change to",
   "selectLanguage": "Select language",
   "currentLanguage": "Current language",
+  "language": "Language",
   "header": {
     "home": "Home",
     "projects": "Projects",
