--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -3,6 +3,7 @@
   "changeLanguageTo": "Cambiar a",
   "selectLanguage": "Seleccionar idioma",
   "currentLanguage": "Idioma actual",
+  "language": "Idioma",
   "header": {
     "home": "Inicio",
     "projects": "Proyectos",
