test: setup Playwright and Jest with basic accessibility integration tests
- Configured Playwright and Jest for testing
- Added basic integration tests using axe-core for accessibility validation
- Implemented tests to check landmarks and semantic structure

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -4,6 +4,7 @@
   "selectLanguage": "Select language",
   "currentLanguage": "Current language",
   "language": "Language",
+  "mainContent": "Main content",
   "header": {
     "home": "Home",
     "projects": "Projects",
