--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -4,6 +4,7 @@
   "selectLanguage": "Seleccionar idioma",
   "currentLanguage": "Idioma actual",
   "language": "Idioma",
+  "mainContent": "Contenido principal",
   "header": {
     "home": "Inicio",
     "projects": "Proyectos",
