feat(socials): -Added CV to socials. -Added better feedback to the user with v-tooltips.

--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -21,7 +21,8 @@
     "whatsapp": "Enviar un mensaje por WhatsApp a Francisco Olmos",
     "email": "Enviar un email a Francisco Olmos",
     "github": "Ir a GitHub de Francisco Olmos",
-    "linkedin": "Ir a LinkedIn de Francisco Olmos"
+    "linkedin": "Ir a LinkedIn de Francisco Olmos",
+    "donwloadCv": "Descargar CV"
   },
   "landmarks": {
     "footer": "Pie de página",
