--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -21,7 +21,8 @@
     "whatsapp": "Send a message by WhatsApp to Francisco Olmos",
     "email": "Send an email to Francisco Olmos",
     "github": "Go to GitHub of Francisco Olmos",
-    "linkedin": "Go to LinkedIn of Francisco Olmos"
+    "linkedin": "Go to LinkedIn of Francisco Olmos",
+    "donwloadCv": "Download CV"
   },
   "landmarks": {
     "footer": "Footer",
