feat(socials): Added a btn to copy the e-mail and more feedback.

--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -22,7 +22,9 @@
     "email": "Enviar un email a Francisco Olmos",
     "github": "Ir a GitHub de Francisco Olmos",
     "linkedin": "Ir a LinkedIn de Francisco Olmos",
-    "donwloadCv": "Descargar CV"
+    "donwloadCv": "Descargar CV",
+    "copyEmail": "Copiar email",
+    "emailCopied": "Email copiado"
   },
   "landmarks": {
     "footer": "Pie de página",
