--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -22,7 +22,9 @@
     "email": "Send an email to Francisco Olmos",
     "github": "Go to GitHub of Francisco Olmos",
     "linkedin": "Go to LinkedIn of Francisco Olmos",
-    "donwloadCv": "Download CV"
+    "donwloadCv": "Download CV",
+    "copyEmail": "Copy email",
+    "emailCopied": "Email copied"
   },
   "landmarks": {
     "footer": "Footer",
