fix on contact text.

--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -6,7 +6,7 @@
   "language": "Idioma",
   "spain": "España",
   "mainContent": "Contenido principal",
-  "contactMe": "Contactame",
+  "contactMe": "Contáctame",
   "deactivateAnimations": "Desactivar animaciones",
   "activateAnimations": "Activar animaciones",
   "changeLightTheme": "Cambiar a tema claro",
