feat(techs): translations for alt text of images and vue framework added

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -36,6 +36,12 @@
     "photoAlt": "Photo of Francisco Olmos"
   },
   "skills": {
-    "title": "Skills"
+    "title": "Skills",
+    "sections": {
+      "frontend": "Frontend",
+      "backend": "Backend",
+      "others": "Others",
+      "testing": "Testing"
+    }
   }
 }
